[tool.poetry]
name = "muxer"
version = "0.1.0"
description = ""
authors = ["qzzhv <30725461+qzzhv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffmpeg-python = "^0.2.0"
luigi = "^3.5.0"
loguru = "^0.7.2"
pycron = "^3.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
